June 2016 5.4
  - Unix: support magic numbers for UIDs/GIDs (e.g. 389 server DNA plugin)
  - LAM Pro:
   -> New module for 389ds unlocking and deactivation status
   -> Self registration: support for Google reCAPTCHA
   -> Password notification jobs support CC and BCC


21.03.2016 5.3
  - Requires PHP 5.4.0 or higher
  - PHP 7 support
  - Windows: support management of fax number
  - Login can show display name instead of server URL
  - Personal/Unix: support K5KEY hash type for smbk5pwd
  - New NIS netgroup module for hosts
  - Puppet: autocompletion for classes and variables, allow to enforce list of possible classes
  - fixed bugs:
   -> Autoload errors in tree view
   -> Set correct content type on JSON requests (174)
  - LAM Pro:
   -> Support for LDAP views based on nsview object class
   -> Password notification jobs support to print expiration date in email
   -> PPolicy password notification job takes pwdExpireWarning into account
   -> Custom fields: support calendar fields
   -> Zarafa contacts: allow to create contacts without Unix extension
   -> Added options for password rest page to server profile


15.12.2015 5.2
  - Windows: support for additional attributes (jpegPhoto, title, carLicense,
    employeeNumber, employeeType, businessCategory, departmentNumber, ou, o, manager)
  - SSH public key: added possibility to add/remove SSH extension
  - MIT Kerberos: set krbExtraData for new accounts
  - IMAP: allow to specify initial folders to create
  - LAM Pro:
   -> Users: allow to manage IP addresses with ipHost module
   -> Self Service: added time zone setting in self service profile
   -> Shadow: added job to notify before Shadow password expires
   -> Windows: added job to notify before Windows password expires


31.08.2015 5.1
  - IMAP: support Windows users
  - SSH public key: check uploaded files if in right format
  - LAM Pro:
   -> Self Service optimized also for mobile devices
   -> MySQL support for cron jobs